--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
             </p>
             <div class="row">
                 <div class="col-lg-4">
-                    <div>
-                        
-                    </div>
+                    <div></div>
                 </div>
                 
             </div>
