--- a/index.html
+++ b/index.html
@@ -102,14 +102,101 @@
             </p>
             <div class="row">
                 <div class="col-lg-4">
-                    <div></div>
+                    <div class="card">
+                        <img src="./image/card1.png" alt="">
+                        <h4>Membership Organisations</h4>
+                        <p>Our membership management software provides full automation of membership renewals and
+                            payments</p>
+                    </div>
                 </div>
-                
+                <div class="col-lg-4">
+                    <div class="card card2">
+                        <img src="./image/card2.png" alt="">
+                        <h4>National</h4>
+                        <p>Our membership management software provides full automation of membership renewals and
+                            payments</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card card3">
+                        <img src="./image/card3.png" alt="">
+                        <h4>Clubs And Groups</h4>
+                        <p>Our membership management software provides full automation of membership renewals and
+                            payments</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <!------------- community  end --------- -->
+    <!------------- pixel start --------- -->
+    <section class="pixel">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="./image/baner-image2.png" alt="">
+                </div>
+                <div class="col-lg-8">
+                    <h3>The unseen of spending three years at Pixelgrade</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan
+                        quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
+                        tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar,
+                        aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
+                    <div class="btm ">
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </section>
+    <!------------- pixel end --------- -->
+    <!------------- business start --------- -->
+    <section class="business">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 text">
+                    <h3>Helping a local <span>business reinvent itself</span></h3>
+                    <p>We reached here with our hard work and dedication</p>
+                </div>
+                <div class="col-lg-6 icon">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <img src="./image/business-icon3.png" alt="">
+                            <div>
+                                <h5>2,245,341</h5>
+                                <p>Members</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <img src="./image/business-icon2.png" alt="">
+                            <div>
+                                <h5>46,328</h5>
+                                <p>Clubs</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 icon2">
+                            <img src="./image/business-icon3.png" alt="">
+                            <div>
+                                <h5>828,867</h5>
+                                <p>Event Bookings</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 icon2">
+                            <img src="./image/business-icon4.png" alt="">
+                            <div>
+                                <h5>1,926,436</h5>
+                                <p>Payments</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!------------- business end --------- -->
     <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
