--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
     <section class="pixel">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-5">
                     <img src="./image/baner-image2.png" alt="">
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-7">
                     <h3>The unseen of spending three years at Pixelgrade</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan
                         quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
@@ -197,6 +197,61 @@
         </div>
     </section>
     <!------------- business end --------- -->
+    <!------------- design start --------- -->
+    <section class="design">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5">
+                    <img src="./image/desing.png" alt="">
+                </div>
+                <div class="col-lg-7">
+                    <h3>How to design your site footer like we did</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan
+                        quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
+                        tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar,
+                        aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
+                    <div class="btm ">
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!------------- design end --------- -->
+    <!------------- customer start--------- -->
+    <section class="customer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="./image/customer-image.png" alt="">
+                </div>
+                <div class="col-lg-8">
+                    <p>Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus
+                        tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in,
+                        gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie,
+                        nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla
+                        sodales. Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque
+                        malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget
+                        efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.
+                    </p>
+                    <h6>Tim Smith</h6>
+                    <span>British Dragon Boat Racing Association</span>
+                    <div class="image">
+                      <img src="./image/Logo (1).png" alt="">
+                      <img src="./image/Logo (2).png" alt="">
+                      <img src="./image/Logo (3).png" alt="">
+                      <img src="./image/Logo (4).png" alt="">
+                      <img src="./image/Logo (5).png" alt="">
+                      <img src="./image/Logo (6).png" alt="">
+                      <div class="arow">
+                        <a href="">Meet all customers <i class="fa-solid fa-arrow-right-long"></i></a>
+                      </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <!------------- customer end --------- -->
     <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
